--- a/src/pages/About/styles.css
+++ b/src/pages/About/styles.css
@@ -1,5 +1,5 @@
 .about__container {
-    width: 100vw;
+    width: 100%;
     margin: 2rem 0;
 }
 
@@ -14,7 +14,7 @@
 
 .about__content {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     max-height: 23rem;
     display: flex;
     flex-direction: row;
