--- a/src/pages/AboutByte/styles.css
+++ b/src/pages/AboutByte/styles.css
@@ -1,6 +1,6 @@
 .aboutbyte__container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 2.5rem 0;
 }
 
