--- a/src/pages/FAQs/styles.css
+++ b/src/pages/FAQs/styles.css
@@ -3,6 +3,7 @@
     width: 100%;
     padding: 10%;
     position: relative;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
