--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -3,7 +3,7 @@
 }
 #landing__container{
     background-color:rgb(20, 35, 85);
-    width:100vw;
+    width:100%;
     margin:2.5rem 0;
     padding:0;
 }
