--- a/src/pages/Testimonials/styles.css
+++ b/src/pages/Testimonials/styles.css
@@ -37,7 +37,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-self: center;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
 }
 
@@ -102,7 +102,7 @@ body {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         align-self: center;
-        width: 100vw;
+        width: 100%;
         justify-content: center;
         margin: 0 5rem;
     }
@@ -174,7 +174,7 @@ body {
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-self: center;
-        width: 100vw;
+        width: 100%;
         justify-content: center;
         margin: 0 5rem;
     }
@@ -217,7 +217,7 @@ body {
         display: grid;
         grid-template-columns: 1fr;
         align-self: center;
-        width: 100vw;
+        width: 100%;
         justify-content: center;
         margin: 0 5rem;
     }
